Closed Bug 647150 Opened 15 years ago Closed 15 years ago

Fix compile of nsWifiScannerSolaris.cpp

Categories

(Core :: Networking, defect)

All
Solaris
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla5

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

References

Details

Attachments

(1 file)

It was broken by Bug 645263. We need to apply the same patch for this file.
Attached patch patchSplinter Review
Assignee: nobody → ginn.chen
Status: NEW → ASSIGNED
Attachment #523530 - Flags: review?(jones.chris.g)
Attachment #523530 - Flags: review?(jones.chris.g) → review+
Whiteboard: fixed-in-cedar
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-cedar
Target Milestone: --- → mozilla2.2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: