Bug 647150 Fix compile of nsWifiScannerSolaris.cpp r=cjones NPOTB