netwerk/wifi/nsWifiScannerSolaris.cpp
@@ -38,7 +38,6 @@
  *
  * ***** END LICENSE BLOCK ***** */
 
-#include "nsAutoPtr.h"
 #include "nsWifiMonitor.h"
 #include "nsWifiAccessPoint.h"
 
@@ -52,6 +51,8 @@
 
 #define DLADM_STRSIZE 256
 #define DLADM_SECTIONS 3
+
+using namespace mozilla;
 
 struct val_strength_t {
   const char *strength_name;
@@ -173,7 +174,7 @@ nsWifiMonitor::DoScan()
     nsCOMArray<nsIWifiListener> currentListeners;
 
     {
-      nsAutoMonitor mon(mMonitor);
+      MonitorAutoEnter mon(mMonitor);
 
       for (PRUint32 i = 0; i < mListeners.Length(); i++) {
         if (!mListeners[i].mHasSentData || accessPointsChanged) {
@@ -222,7 +223,7 @@ nsWifiMonitor::DoScan()
 
     LOG(("waiting on monitor\n"));
 
-    nsAutoMonitor mon(mMonitor);
+    MonitorAutoEnter mon(mMonitor);
     mon.Wait(PR_SecondsToInterval(60));
   }
 
